--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
+.test {
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  height: 168;
+  width: 109px;
+  border-radius: 20px;
+  border-color: red;
+  
+ 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  @media only screen and (max-width: 600px) {
+    .test {
+      width: 100;
+      height: auto;
+    }
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
